# nagyhz_2

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  _124:5:24:11:48:4.txt  _124:5:24:11:48:53.txt  doxy.conf  linux_run.sh  windows_run.ps1
docs/: specifikacio.docx  vegleges.docx
docs/html/: UIcomponents_8hpp_source.html  annotated.html  classAttackMove-members.html  classAttackMove.html  classAttackMove__coll__graph.map  classAttackMove__coll__graph.md5  classBlueSpawnArea-members.html  classBlueSpawnArea.html  classBlueSpawnArea__inherit__graph.map  classBlueSpawnArea__inherit__graph.md5  classBuff-members.html  classBuff.html  classBuff__coll__graph.map  classBuff__inherit__graph.md5  classBush-members.html  classBush.html  classBush__coll__graph.map  classBush__inherit__graph.md5  classButton-members.html  classButton.html  classButton__coll__graph.map  classButton__coll__graph.md5  classButton__inherit__graph.map  classButton__inherit__graph.md5  classCamp-members.html  classCamp.html  classCamp__coll__graph.map  classCamp__coll__graph.md5  classCamp__inherit__graph.map  classCamp__inherit__graph.md5  classCell-members.html  classCell.html  classCell__inherit__graph.map  classCell__inherit__graph.md5  classChampion-members.html  classChampion.html  classChampion__coll__graph.map  classChampion__coll__graph.md5  classChampion__inherit__graph.map  classChampion__inherit__graph.md5  (+214 more)
docs/latex/: annotated.tex  classAttackMove.tex  classAttackMove__inherit__graph.md5  classBlueSpawnArea.tex  classBlueSpawnArea__inherit__graph.md5  classBuff.tex  classBuff__inherit__graph.md5  classBush.tex  classBush__coll__graph.md5  classButton.tex  classButton__coll__graph.md5  classButton__inherit__graph.md5  classCamp.tex  classCamp__coll__graph.md5  classCamp__inherit__graph.md5  classCell.tex  classCell__inherit__graph.md5  classChampion.tex  classChampion__coll__graph.md5  classChampion__inherit__graph.md5  classDraftButton.tex  classDraftButton__inherit__graph.md5  classDraftState.tex  classDraftState__coll__graph.md5  classDraftState__inherit__graph.md5  classDraftTurn.tex  classEffect.tex  classEffect__inherit__graph.md5  classEntity.tex  classEntity__coll__graph.md5  classEntity__inherit__graph.md5  classGameMove.tex  classGameMove__inherit__graph.md5  classGameState.tex  classGameState__coll__graph.md5  classGameState__inherit__graph.md5  classGrid.tex  classGround.tex  classGround__coll__graph.md5  classGround__inherit__graph.md5  (+65 more)
examples/: champions.txt  champions2.txt  champions_notenough.txt  game_124:5:23:19:15:42.txt  game_124:5:23:19:21:40.txt  game_124:5:24:13:57:30.txt  game_124:5:24:14:34:5.txt  game_124:5:24:14:48:47.txt  game_124:5:24:18:10:11.txt  game_124:5:24:18:11:31.txt  game_124:5:24:18:14:49.txt  game_124:5:24:18:15:32.txt  game_124:5:24:18:16:39.txt  game_124:5:24:18:17:30.txt  game_124:5:24:18:18:37.txt  game_124:5:24:18:19:14.txt  game_124:5:24:18:27:57.txt  game_124:5:24:18:29:1.txt  game_124:5:24:18:2:36.txt  game_124:5:24:18:51:51.txt  game_124:5:24:20:52:4.txt  game_124:5:24:20:54:27.txt  game_124:5:24:21:14:24.txt  game_124:5:24:21:17:14.txt  items.txt
html/: UIcomponents_8hpp_source.html  annotated.html  classAttackMove-members.html  classAttackMove.html  classBush-members.html  classBush.html  classCamp-members.html  classCamp.html  classCell-members.html  classCell.html  classChampBox-members.html  classChampBox.html  classChampion-members.html  classChampion.html  classDraftButton-members.html  classDraftButton.html  classDraftNamedBox-members.html  classDraftNamedBox.html  classDraftState-members.html  classDraftState.html  classDraftTurn-members.html  classDraftTurn.html  classDrake-members.html  classDrake.html  classEffect-members.html  classEffect.html  classEntity-members.html  classEntity.html  classGameButton-members.html  classGameButton.html  classGameMove-members.html  classGameMove.html  classGameState-members.html  classGameState.html  classGround-members.html  classGround.html  classIreadstring-members.html  classIreadstring.html  classItem-members.html  classItem.html  (+104 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  defines_1.js  functions_0.js  functions_1.js  functions_10.js  (+26 more)
include/: UIcomponents.hpp  draft.hpp  engine.hpp  entities.hpp  game.hpp  gamemoves.hpp  gameobjects.hpp  ioparser.h  ioparser.hpp  map.hpp  menu.hpp  renderer.hpp  resources.hpp  settings.hpp  simulation.hpp  statemanagement.hpp
latex/: UIcomponents_8hpp_source.tex  annotated.tex  classAttackMove.eps  classAttackMove.tex  classBush.eps  classBush.tex  classCamp.eps  classCamp.tex  classCell.eps  classCell.tex  classChampBox.eps  classChampBox.tex  classChampion.eps  classChampion.tex  classDraftButton.eps  classDraftButton.tex  classDraftNamedBox.eps  classDraftNamedBox.tex  classDraftState.eps  classDraftState.tex  classDraftTurn.tex  classDrake.eps  classDrake.tex  classEffect.eps  classEffect.tex  classEntity.eps  classEntity.tex  classGameButton.eps  classGameButton.tex  classGameMove.eps  classGameMove.tex  classGameState.tex  classGround.eps  classGround.tex  classIreadstring.eps  classIreadstring.tex  classItem.eps  classItem.tex  classItemBox.eps  classItemBox.tex  (+75 more)
resources/: map.txt
src/: UIcomponents.cpp  draft.cpp  engine.cpp  entities.cpp  game.cpp  gamemoves.cpp  gameobjects.cpp  ioparser.cpp  main.cpp  map.cpp  menu.cpp  renderer.cpp  resources.cpp  settings.cpp  simulation.cpp  statemanagement.cpp
test/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  champstest.txt  cmake_install.cmake  itemstest.txt  main.cpp  main_test.cpp
(+31 files in other folders)
